javaDSL/src/test/resources/typeSystemTestModels/valid/names/ClassValidSuperTypes.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.names;

import java.lang.Number;
import java.util.List;

public class ClassValidSuperTypes extends Number implements List<String> {

}
